[tool.poetry]
name = "test-nadles"
version = "0.1.0"
description = ""
authors = ["ms-boom <work-msboom@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.1"
uvicorn = "^0.29.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
